--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -28,6 +28,7 @@
     </form>
 
 </div>
+<div><a href="/hello">进入hello页面</a></div>
 <script>
     let postBtn = document.getElementById("postFormBtn");
     let postBtn2 = document.getElementById("postFormBtn2");
