--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <link rel="icon" href="data:;base64,=">
 </head>
 <body>
 <div>html表单原生发送post请求</div>
